--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Ingenieria en Software C.H.A.P
+site_name: Ingenieria en Software :")
 dev_addr: 127.0.0.1:8001
 # site_url: 
 # repo_url: 
