--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
     - Individuales:
         - Actividad 1: individual/actividad1.md
         - Actividad 2: individual/actividad2.md
+        - Actividad 3: individual/actividad3.md
     - Colaborativas:
         - Actividad 1: todo.md
 copyright: ©GMDXX
