--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
         - Actividad 1: individual/actividad1.md
         - Actividad 2: individual/actividad2.md
         - Actividad 3: individual/actividad3.md
+        - Actividad 4: individual/actividad4.md
     - Colaborativas:
         - Actividad 1: todo.md
 copyright: ©GMDXX
